--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_library(example)
+add_library(ringbuffer)
 
-target_sources(example
+target_sources(ringbuffer
   PRIVATE
-    example.cpp
+    ringbuffer.cpp
   PUBLIC
-    example.h
+    ringbuffer.h
   )
 
-target_include_directories(example
+target_include_directories(ringbuffer
   PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
   )
@@ -15,11 +15,11 @@ target_include_directories(example
 # we use this to get code coverage
 # flags are only valid with the GNU compiler and on Linux
 if(CMAKE_CXX_COMPILER_ID MATCHES GNU AND CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
-  target_compile_options(example
+  target_compile_options(ringbuffer
     PUBLIC
       "--coverage"
     )
-  target_link_options(example
+  target_link_options(ringbuffer
     INTERFACE
       "--coverage"
     )
